# shrike

./: .cvsignore  ChangeLog  INSTALL  INSTALL.txt  Makefile.am  Makefile.win32  README  README.osx  bootstrap  configure.ac  macos_build.sh  win32.mk
config/: gl.m4  oglft.m4  wx.m4
newopt/: ChangeLog  Makefile.am  configure.ac
newopt/config/: sh.m4  shmedia.m4
newopt/src/: Globals.hpp  ShGenMap.cpp  ShGenSBRDF.cpp  ShSparse.cpp  ShTrackball.cpp  ShTrackball.hpp  Shader.hpp  ShrikeApp.hpp  ShrikeCanvas.cpp  ShrikeCanvas.hpp  ShrikePropsDialog.cpp  Timer.cpp  util.cpp  util.hpp
newopt/src/HDRImages/: HDRCubeMap.hpp  HDRImage.hpp  HDRTonemap.hpp
newopt/src/shaders/: AlgebraShader.cpp  AnisotropicDiffusion.cpp  Banks.cpp  BrickHorizon.cpp  CannyEdgeDetector.cpp  CelShader.cpp  Checkerboard.cpp  CubeMap.cpp  DiscoShader.cpp  EdgeDetection.cpp  EnvMapShader.cpp  FragmentLooping.cpp  GlassShader.cpp  HDRInterp.cpp  HDRMipMap.cpp  HDRShinyBumpMap.cpp  HDRWrap.cpp  HomomorphicShader.cpp  LCD.cpp  LCD.hpp  LCDSmall.cpp  LCDSmall.hpp  SatinShader.cpp  SparseTexture.cpp  TangentArrows.cpp  VertexBranching.cpp
src/: .cvsignore  AboutDialog.cpp  AboutDialog.hpp  AlgebraShader.cpp  Ashikhmin.cpp  Banks.cpp  Brick.cpp  BrickWall.cpp  Build.cpp  Build.hpp  Camera.cpp  Camera.hpp  CelShader.cpp  CookTorrance.cpp  DiffuseShader.cpp  DiscoShader.cpp  DummyShader.cpp  EdgeGooch.cpp  EnvMapShader.cpp  FrameMapping.cpp  GlassShader.cpp  Globals.cpp  Globals.hpp  GrGen.cpp  GrGen.hpp  GrLayout.cpp  GrMonitor.cpp  GrMonitor.hpp  GrNode.cpp  GrNode.hpp  GrPort.cpp  GrPort.hpp  GrProgramMenu.cpp  GrProgramMenu.hpp  GrReverse.cpp  GrReverse.hpp  GrView.cpp  GrView.hpp  HomomorphicShader.cpp  JeweledShader.cpp  (+54 more)
src/HDRImages/: Filters.hpp  HDRCubeMap.cpp  HDRCubeMap.hpp  HDRImage.cpp  HDRImage.hpp  HDRInterp.cpp  HDRInterp.hpp  HDRMipmap.cpp  HDRMipmap.hpp  HDRProbe.cpp  HDRProbe.hpp  HDRTonemap.cpp  HDRTonemap.hpp  LargeTexture.hpp
src/shaders/: AlgebraShader.cpp  AnisotropicDiffusion.cpp  Ashikhmin.cpp  Banks.cpp  BrickHorizon.cpp  BrickWall.cpp  BumpMapShader.cpp  CannyEdgeDetector.cpp  CelShader.cpp  Checkerboard.cpp  ClipMap.cpp  ClipMap.hpp  ConicTest.cpp  CookTorrance.cpp  CornerTest.cpp  CubeMap.cpp  Derivatives.cpp  DiffuseShader.cpp  DiscoShader.cpp  DummyShader.cpp  EdgeDetection.cpp  EdgeGooch.cpp  EnvMapShader.cpp  FragmentBranching.cpp  FragmentLooping.cpp  FrameMapping.cpp  GaussianBlur.cpp  GlassShader.cpp  HDRGlass.cpp  HDRInterp.cpp  HDRLucite.cpp  HDRMipMap.cpp  HDRShinyBumpMap.cpp  HDRToneMapping.cpp  HDRViewer.cpp  HDRWrap.cpp  HairFibers.cpp  HairPhysics.cpp  HairShader.cpp  HomomorphicShader.cpp  (+45 more)
win32/: ChangeLog  Makefile.am  configure.ac  postbuild.bat  shrike.ncb  shrike.sln  shrike.vcproj  win32.mk
win32/src/: Globals.cpp  Shader.cpp  Shader.hpp  ShrikeApp.cpp  ShrikeApp.hpp  ShrikeCanvas.hpp  ShrikeFrame.hpp  ShrikeGl.hpp  ShrikePropsDialog.cpp  Timer.cpp  UniformPanel.cpp  util.cpp
win32/src/shaders/: BrickWall.cpp  BumpMapShader.cpp  Checkerboard.cpp  Derivatives.cpp  DiscoShader.cpp  EnvMapShader.cpp  FrameMapping.cpp  GlassShader.cpp  HairPhysics.cpp  JeweledShader.cpp  LCD.cpp  LCDSmall.cpp  LafortuneShader.cpp  Logo.cpp  NonPeriodic3D.cpp  Pants.cpp  SatinShader.cpp  ShinyBumpMapShader.cpp  SimplePhong.cpp  TangentArrows.cpp  TexShader.cpp  Textures.cpp  WorleyShader.cpp
win32/vc8/: libalgebra.vcproj  libbrickwall.vcproj  libshrike.vcproj  postbuild.bat  shader.vsprops  shrike.sln  shrike.vcproj
