AM_CPPFLAGS = -I../ -DSHRIKE_LIBRARY_SHADER
AM_LDFLAGS = -L../ -lshrike

shrikeshaderdir = $(prefix)/lib/shrike

shrikeshader_LTLIBRARIES = \
	libdiffuse.la \
	libdisco.la \
	libphong.la \
	libsimplephong.la \
	libsimplediffuse.la \
	libworley.la \
	libtex.la \
	libashikhmin.la \
	libtexter.la \
	libwobble.la \
	liblogo.la \
	libnonperiodic.la \
	libnonperiodic3d.la \
	libnoise.la \
	libtextures.la \
	libpants.la \
	libenvmap.la \
	libshinybumpmap.la \
	libhomomorphic.la \
	libsatin.la \
	libjeweled.la \
	libalgebra.la \
	libglass.la \
	liblucite.la \
	libcooktorrance.la \
	libbanks.la \
	libbrickwall.la \
	libbrickhorizon.la \
	libhorizonmapping.la \
	libhair.la \
	liblcd.la \
	liblcdsmall.la \
	liblafortune.la \
	libderivatives.la \
	libcheckerboard.la \
	libvertexbranching.la \
	libtangents.la \
	libtangentarrows.la \
	libbumpmap.la \
	libfragmentbranching.la \
	libfragmentlooping.la \
	libpaletteexample.la

libdiffuse_la_SOURCES = DiffuseShader.cpp
libdisco_la_SOURCES = DiscoShader.cpp
libphong_la_SOURCES = PhongShader.cpp
libsimplephong_la_SOURCES = SimplePhong.cpp
libsimplediffuse_la_SOURCES = SimpleDiffuse.cpp
libworley_la_SOURCES = WorleyShader.cpp
libtex_la_SOURCES = TexShader.cpp
libashikhmin_la_SOURCES = Ashikhmin.cpp
libtexter_la_SOURCES = Texter.cpp Text.cpp Text.hpp
libwobble_la_SOURCES = WobbleShader.cpp
liblogo_la_SOURCES = Logo.cpp Text.cpp Text.hpp
libnonperiodic_la_SOURCES = NonPeriodic.cpp
libnonperiodic3d_la_SOURCES = NonPeriodic3D.cpp
libnoise_la_SOURCES = NoiseShader.cpp
libtextures_la_SOURCES = Textures.cpp
libpants_la_SOURCES = Pants.cpp
libenvmap_la_SOURCES = EnvMapShader.cpp
libshinybumpmap_la_SOURCES = ShinyBumpMapShader.cpp
libhomomorphic_la_SOURCES = HomomorphicShader.cpp
libsatin_la_SOURCES = SatinShader.cpp
libjeweled_la_SOURCES = JeweledShader.cpp
libalgebra_la_SOURCES = AlgebraShader.cpp
libglass_la_SOURCES = GlassShader.cpp
liblucite_la_SOURCES = LuciteShader.cpp
libcooktorrance_la_SOURCES = CookTorrance.cpp
libbanks_la_SOURCES = Banks.cpp
libbrickwall_la_SOURCES = BrickWall.cpp
libbrickhorizon_la_SOURCES = BrickHorizon.cpp
libhorizonmapping_la_SOURCES = HorizonMapping.cpp
libhair_la_SOURCES = HairShader.cpp
liblcd_la_SOURCES = LCD.hpp LCD.cpp
liblcdsmall_la_SOURCES = LCDSmall.hpp LCDSmall.cpp
liblafortune_la_SOURCES = LafortuneShader.cpp
libderivatives_la_SOURCES = Derivatives.cpp
libcheckerboard_la_SOURCES = Checkerboard.cpp
libvertexbranching_la_SOURCES = VertexBranching.cpp
libtangents_la_SOURCES = Tangents.cpp
libtangentarrows_la_SOURCES = TangentArrows.cpp
libbumpmap_la_SOURCES = BumpMapShader.cpp
libfragmentbranching_la_SOURCES = FragmentBranching.cpp
libfragmentlooping_la_SOURCES = FragmentLooping.cpp
libpaletteexample_la_SOURCES = PaletteExample.cpp
